--- a/api/.env
+++ b/api/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="mongodb+srv://fazfarhan7:farhanjoy12@cluster0.ltoyk.mongodb.net/Cluster0?retryWrites=true&w=majority"
 JWT_SECRET_KEY=realestate
+CLIENT_URL= http://localhost:5173
