--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
