--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@cloudinary/url-gen": "^1.21.0",
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
+    "dompurify": "^3.2.3",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.2",
     "sass": "^1.83.0"
   },
